Persist data for embed & object tags. b=141316 r=brade@netscape.com sr=kin@netscape.com a=asa@mozilla.org